@@ -18,7 +18,13 @@
     isxdigit to is_xdigit
     tolower to to_lower
     toupper to to_upper
-
+    strtoi to to_int_with_base
+    strtol to to_long_with_base
+    strtof to to_float
+    strtod to to_double
+  - add SPVM::StringUtil->to_int
+  - add SPVM::StringUtil->to_long
+  
 0.0947 2021-04-27
   - array equals methods return 1 if both arrays is undef. return 0 if only one one arrays is undef.
     equals_byte_array
